# thermal-printer-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/catprint_bot/: config.py  main.py  service.py
src/catprint_bot/api/: health.py
src/catprint_bot/bot/: auth.py  handlers.py
src/catprint_bot/database/: models.py  repository.py  session.py
src/catprint_bot/printing/: driver.py  renderer.py
src/catprint_bot/scheduler/: retry.py
tests/: conftest.py  test_auth.py  test_config.py  test_driver.py  test_handlers.py  test_health.py  test_integration.py  test_models.py  test_renderer.py  test_repository.py  test_scheduler.py  test_service.py
