[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thermal-printer-telegram-bot"
version = "0.1.0"
description = "Telegram bot that prints messages on a Bluetooth thermal printer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "pillow>=12.0",
    "bleak>=0.22",
    "python-bidi>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=4.0",
]

[project.scripts]
thermal-printer-telegram-bot = "catprint_bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/catprint_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
# cat-printer (https://github.com/NaitLee/Cat-Printer) must be cloned into ./cat-printer/
# It is not published to PyPI.
